--- a/SimpleVouchersFrontend/package.json
+++ b/SimpleVouchersFrontend/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.1",
+    "@material-ui/icons": "^4.9.1",
+    "axios": "^0.21.0",
     "bootstrap": "^4.1.3",
     "jquery": "^3.4.1",
     "merge": "^1.2.1",
@@ -10,10 +13,12 @@
     "react": "^16.0.0",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^16.0.0",
+    "react-redux": "^7.2.2",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.1",
     "reactstrap": "^8.4.1",
+    "redux": "^4.0.5",
     "rimraf": "^2.6.2"
   },
   "devDependencies": {
@@ -32,7 +37,7 @@
     "extends": "react-app"
   },
   "scripts": {
-    "start": "rimraf ./build && react-scripts start",
+    "start": "rimraf ./build && set PORT=8080 && react-scripts start",
     "build": "react-scripts build",
     "test": "cross-env CI=true react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
