--- a/SimpleVouchersFrontend/package.json
+++ b/SimpleVouchersFrontend/package.json
@@ -3,15 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.11.1",
+    "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.9.1",
-    "axios": "^0.21.0",
+    "@material-ui/lab": "^4.0.0-alpha.57",
+    "axios": "^0.21.1",
     "bootstrap": "^4.1.3",
     "jquery": "^3.4.1",
+    "material-ui": "^0.20.2",
     "merge": "^1.2.1",
     "oidc-client": "^1.9.0",
+    "papercss": "^1.8.2",
     "react": "^16.0.0",
+    "react-autosuggest": "^10.1.0",
     "react-bootstrap": "^1.4.0",
+    "react-datepicker": "^3.4.1",
     "react-dom": "^16.0.0",
     "react-redux": "^7.2.2",
     "react-router-bootstrap": "^0.25.0",
@@ -24,20 +29,20 @@
   "devDependencies": {
     "ajv": "^6.9.1",
     "cross-env": "^5.2.0",
-    "typescript": "^3.7.5",
     "eslint": "^6.8.0",
     "eslint-config-react-app": "^5.2.0",
     "eslint-plugin-flowtype": "^4.6.0",
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.18.3",
-    "nan": "^2.14.1"
+    "nan": "^2.14.1",
+    "typescript": "^3.7.5"
   },
   "eslintConfig": {
     "extends": "react-app"
   },
   "scripts": {
-    "start": "rimraf ./build && set PORT=8080 && react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "cross-env CI=true react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
