--- a/SimpleVouchersFrontend/package.json
+++ b/SimpleVouchersFrontend/package.json
@@ -4,10 +4,11 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.3",
-    "@material-ui/icons": "^4.9.1",
+    "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
     "axios": "^0.21.1",
     "bootstrap": "^4.1.3",
+    "chart.js": "^2.9.4",
     "jquery": "^3.4.1",
     "material-ui": "^0.20.2",
     "merge": "^1.2.1",
@@ -15,9 +16,12 @@
     "papercss": "^1.8.2",
     "react": "^16.0.0",
     "react-autosuggest": "^10.1.0",
-    "react-bootstrap": "^1.4.0",
+    "react-bootstrap": "^1.4.3",
+    "react-chartjs-2": "^2.11.1",
+    "react-cookie": "^4.0.3",
     "react-datepicker": "^3.4.1",
     "react-dom": "^16.0.0",
+    "react-password-strength-bar": "^0.3.2",
     "react-redux": "^7.2.2",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.1.2",
